crates/toml/tests/snapshots/invalid/encoding/ideographic-space.stderr
TOML parse error at line 2, column 1
  |
2 | 　foo = "bar"
  | ^^
invalid unquoted key, expected letters, numbers, `-`, `_`
